# qwen-code-ui

./: .gitignore  CMakeLists.txt  PyStand.cpp  PyStand.int  README.md  Start  check_path.py  force_run.py  main.py  model_providers.json  quick_start.bat  quick_start.py  qwen code ui.spec  qwencode-ui.spec  requirements.txt  run.bat  run_pigar.py  run_tests.bat  run_tests.py  skills.json  start.bat  start.py  start_dev.bat  start_dev.py  start_pystand.py  tags.json  test_approval_mode_interaction.py  test_chinese_exclude.py  test_config_migration.py  test_copy.py  test_filesystem_fix.py  test_fix.py  test_git_utils.py  test_mcp_config.py  tests_filesystem_new_ops.py  ui_settings.json  verify_logger.py  抖音快手短视频提示词.md
.history/: config.json
.trae/documents/: Add Chinese Logging for Debugging Permission Flow.md  Add Detailed Error Logging for Tool Failures.md  Add Detailed Parsing Logs for Debugging.md  Add Git Management Panel.md  Add Maximize, Drag, and Resize to File Preview.md  Add Missing Project API Endpoints.md  Add Undo Changes Button to Git Interface.md  Add Version Selection Highlighting.md  Add detailed debug logging to session persistence and retrieval logic.md  (+134 more)
crates/: cli_runner.py  events.py  filesystem.py  mdConvert.py  projects.py  questionnaires.py  qwen_adapter.py  rpc.py  search.py  session.py  tests_minimal.py  watcher.py
data/: projects.json
docs/: web-mode-architecture.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
server/: api_web.py  main.py
test/: parse_qwen_line_check.py  test_cligent_workflow.py  test_cligent_workflow_cn.py  test_cligent_workflow_v2.py  test_event_payload_shape.py  test_qwen_handshake.py  test_qwencode_generate_code.py  verify_qwen_mock.py
test_workspace/: config.json  excluded.txt
tests/: debug_subprocess.py  test_interaction.py  test_qwen_backend.py
参考文件/gemini-cli-desktop-0.3.14/crates/backend/: Cargo.toml
参考文件/gemini-cli-desktop-0.3.14/crates/backend/src/: lib.rs  test_utils.rs
参考文件/gemini-cli-desktop-0.3.14/crates/backend/src/acp/: mod.rs
参考文件/gemini-cli-desktop-0.3.14/crates/backend/src/cli/: mod.rs
参考文件/gemini-cli-desktop-0.3.14/crates/backend/src/events/: mod.rs
参考文件/gemini-cli-desktop-0.3.14/crates/backend/src/filesystem/: mod.rs
参考文件/gemini-cli-desktop-0.3.14/crates/backend/src/projects/: mod.rs
参考文件/gemini-cli-desktop-0.3.14/crates/backend/src/rpc/: mod.rs
参考文件/gemini-cli-desktop-0.3.14/crates/backend/src/search/: mod.rs
参考文件/gemini-cli-desktop-0.3.14/crates/backend/src/session/: mod.rs
参考文件/gemini-cli-desktop-0.3.14/crates/server/: Cargo.toml
参考文件/gemini-cli-desktop-0.3.14/crates/server/src/: main.rs
参考文件/gemini-cli-desktop-0.3.14/crates/tauri-app/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
参考文件/gemini-cli-desktop-0.3.14/crates/tauri-app/capabilities/: default.json
参考文件/gemini-cli-desktop-0.3.14/crates/tauri-app/icons/: icon.icns
参考文件/gemini-cli-desktop-0.3.14/crates/tauri-app/src/: event_emitter.rs  lib.rs  main.rs  menu.rs  state.rs
参考文件/gemini-cli-desktop-0.3.14/crates/tauri-app/src/commands/: mod.rs
(+236 files in other folders)
