[package]
name = "backend"
version = "0.3.14"
edition = "2024"

[features]
default = []
proptest = ["dep:proptest"]

[dependencies]
anyhow = "1.0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
ignore = "0.4"
base64 = "0.22"
url = "2.5"
proptest = { version = "1.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
mockall = "0.13"
serial_test = "3.0"
cargo-tarpaulin = "0.31"
criterion = "0.5"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"
